--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-parallax-tilt": "^1.7.299",
     "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.11",
     "typewriter-effect": "^2.22.0"
